# play-hackathon-beszketnyky

./: .env.example  .gitignore  README.md  STRUKTURA_PROJEKTU.md  docker-compose.yml  env.example  pyproject.toml  raw_news_data.json  requirements.txt  test_connection.py  test_scaleway_db.py
backend/: .env.new  Dockerfile  debug_config.py  env.example  main.py  migrate_database.py  nginx.conf  requirements.txt  requirements_new.txt  simple_test.py  start.sh  test_database_paths.py  test_db.py  test_main_workflow.py  test_managed_db.py  test_object_storage.py  test_simple_db.py  test_simple_workflow.py  test_storage_integration.py  test_system.py
backend/agents/: exmpl.json  final_summarizer_agent.py  keeper_agent.py  langgraph_config.py  perplexity_agent.py  prompts.py  serper_verification_agent.py  states.py  tips_alerts_generator.py  workflow.py  writer_agent.py
backend/api/: routes.py
backend/database/: connection.py
backend/rag/: index_builder.py  mock_input.json  retriever.py  test.py
backend/services/: config.py  database.py  database_managed.py  database_new.py  database_simple.py  email_service.py  http_client.py  llm_clients.py  llm_service.py  object_storage.py  objest_storage.py  openai_service.py  perplexity_service.py  pipeline_storage.py  rag_service.py  report_logger.py  s3_loader.py  scaleway_genai_service.py  scaleway_service.py  scraper_service.py
backend/utils/: config.py
backend/workflows/: main_workflow.py
database/: init.sql  test_connection.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
scrapers/: INTELLIGENCE_SYSTEM_SUMMARY.md  README.md  demo_env_usage.py  env_template.txt  example_usage.py  main_scraper.py  requirements.txt  setup.py
scrapers/operators/: orange_scraper.py  tmobile_plans.py
scrapers/scrapped_data/: play_plans.json  tmobile_plans.json
scrapers/serper/: config.py  financial_scraper.py  legal_scraper.py  political_scraper.py  report_generator.py
smart-tracker/: package.json
ui/: next.config.mjs  package-lock.json  package.json
ui/lib/: api.ts  (+2 more)
(+29 files in other folders)
