[tool.poetry]
name = "play-hackathon-beszketnyky"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.120.0"
uvicorn = "^0.38.0"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"
playwright = "^1.55.0"
pandas = "^2.3.3"
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
langchain = "^1.0.2"
openai = "^2.6.0"
langgraph = "^1.0.1"
pydantic = "^2.12.3"
trafilatura = "^1.6.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
